Cleanup exercises for day 3